--- a/ReHouse.FrontEnd/Content/style.css
+++ b/ReHouse.FrontEnd/Content/style.css
@@ -204,7 +204,7 @@ body {
 
 .contactinfo {
     margin-left: 28px;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
     color: white;
     font-family: "Casper";
     font-weight: 600;
