--- a/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
@@ -61,7 +61,7 @@
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        <a href="~/rent/flat/@Model.Advert.Category.Id">@Model.Advert.Category.RussianName</a>
+        <a href="~/rent/@action/@Model.Advert.Category.Id">@Model.Advert.Category.RussianName</a>
     </div>
 </div>
 
