--- a/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
@@ -64,7 +64,7 @@
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        <a href="~/sale/flat/@Model.Advert.Category.Id">@Model.Advert.Category.RussianName</a>
+        <a href="~/sale/@action/@Model.Advert.Category.Id">@Model.Advert.Category.RussianName</a>
     </div>
 </div>
 
