--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -79,7 +79,7 @@
                             <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
                             <h3>Сдам @item.Title.RussianName.ToLower()</h3>
                             <h4>@item.Description</h4>
-                            <p class="cost">@item.Price $</p>
+                            <p class="cost">@item.Price грн/мес</p>
                             <a href="~/rent/detail/@item.Id" id="follow">❯</a>
                         </div>
                     }
