--- a/ReHouse.FrontEnd/Views/Manager/Profile.cshtml
+++ b/ReHouse.FrontEnd/Views/Manager/Profile.cshtml
@@ -11,7 +11,7 @@
         <pre> </pre>
         <p>/</p>
         <pre> </pre>
-        @Html.ActionLink(Model.FirstName?? "Менеджер", "profile", "manager", new { id = Model.Id })
+        @Html.ActionLink(Model.FirstName ?? "Менеджер", "profile", "manager", new { id = Model.Id })
     </div>
 </div>
 <div class="managers">
@@ -27,7 +27,7 @@
                 <img src="~/content/images/girl1.png" width="240" height="320">
             }
         </div>
-        <div class="contactinfo">            
+        <div class="contactinfo">
             <h3>@Model.Position</h3>
             <h3>Контакты:</h3>
             @if (Model.Phones != null && Model.Phones.Count > 0)
@@ -42,7 +42,7 @@
         <div class="about_manager">
             <p>@Model.About</p>
         </div>
-    </div>    
+    </div>
 </div>
 <div class="h2prodsale"><h2>Объекты менеджера</h2></div>
 <div class="othernovostroy">
@@ -53,16 +53,28 @@
             {
                 <div class="data-item">
                     <li>
-                        @if (item.Type == ReHouse.Utils.Helpers.AdvertsType.Sale)
-                    {
+                        @if (item.IsExclusive)
+                        {
+                            <div class="redimg"><img src="~/Content/images/eksklusiv.png"></div>
+                        }
+                        else if (item.IsHot)
+                        {
                             <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
+                        }
+                        else
+                        {
+                            <div class="redimg"><img src="~/Content/images/newred.png"></div>
+                        }
+                        @if (item.Type == ReHouse.Utils.Helpers.AdvertsType.Sale)
+                        {
+
                             if (item.Images != null && item.Images.Count > 0)
                             {
-                                <a class="fix" href="~/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" alt="" /></a>
+                                <a class="fix" href="~/sale/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" width="250" height="212" alt="" /></a>
                             }
                             else
                             {
-                                <a class="fix" href="~/sale/detail/@item.Id"><img src="~/Content/images/prod1.jpg" alt="" /></a>
+                                <a class="fix" href="~/sale/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
                             }
                             <div class="min-content">
                                 <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
@@ -75,20 +87,20 @@
                         }
                         else
                         {
-                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
+
                             if (item.Images != null && item.Images.Count > 0)
                             {
-                                <a class="fix" href="~/rent/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" alt="" /></a>
+                                <a class="fix" href="~/rent/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" width="250" height="212" alt="" /></a>
                             }
                             else
                             {
-                                <a class="fix" href="~/rent/detail/@item.Id"><img src="~/Content/images/prod1.jpg" alt="" /></a>
+                                <a class="fix" href="~/rent/detail/@item.Id"><img src="~/Content/images/prod1.jpg" width="250" height="212" alt="" /></a>
                             }
                             <div class="min-content">
                                 <div class="like" onclick="addtocart(@item.Id, '@item.Type', true, this);"></div>
                                 <h3>Сдам @item.Title.RussianName.ToLower()</h3>
                                 <h4>@item.Description</h4>
-                                <p class="cost">@item.Price $</p>
+                                <p class="cost">@item.Price грн/мес</p>
                                 <a href="~/rent/detail/@item.Id" id="follow">❯</a>
                             </div>
                         }
@@ -104,7 +116,18 @@
             {
                 <div class="data-item">
                     <li>
-                        <div class="redimg"><img src="~/Content/images/newred.png"></div>
+                        @if (item.IsExclusive)
+                        {
+                            <div class="redimg"><img src="~/Content/images/eksklusiv.png"></div>
+                        }
+                        else if (item.IsHot)
+                        {
+                            <div class="redimg"><img src="~/Content/images/redcorner.png"></div>
+                        }
+                        else
+                        {
+                            <div class="redimg"><img src="~/Content/images/newred.png"></div>
+                        }
                         @if (item.Images != null && item.Images.Count > 0)
                         {
                             <a class="fix" href="~/newbuilding/detail/@item.Id"><img src="@Url.Content(item.Images[0].Url + item.Images[0].FileName)" width="250" height="212" alt="" /></a>
