--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Edit.cshtml
@@ -382,16 +382,18 @@
                     }
                 }
             </table>
-            <h3>Общие фотографии</h3>
+            <h3>Общие фотографии(не более 3-х)</h3>
             @if (Model.Images != null && Model.Images.Count > 0)
             {
-                foreach (var image in Model.Images)
-                {
-                    <div class="photo_" id="image_@image.Id">
-                        <img src="@Url.Content(image.Url+image.FileName)" width="272" height="211" />
-                        <a onclick="deleteImage(@image.Id);">X</a>
-                    </div>
-                }
+                <div class="add_photo">
+                    @foreach (var image in Model.Images)
+                    {
+                        <div class="photo_" id="image_@image.Id">
+                            <img src="@Url.Content(image.Url+image.FileName)" width="272" height="211" />
+                            <a onclick="deleteImage(@image.Id);">X</a>
+                        </div>
+                    }
+                </div>
             }
             <div class="file_upload">
                 <input type="file" multiple="multiple" accept="image/*" name="images" class="select_photo" />
@@ -400,13 +402,15 @@
 
             @if (Model.PlanImages != null && Model.PlanImages.Count > 0)
             {
-                foreach (var image in Model.PlanImages)
-                {
-                    <div class="photo_" id="planimage_@image.Id">
-                        <img src="@Url.Content(image.Url+image.FileName)" width="272" height="211" />
-                        <a onclick="deletePlanImage(@image.Id);">X</a>
-                    </div>
-                }
+                <div class="add_photo">
+                    @foreach (var image in Model.PlanImages)
+                    {
+                        <div class="photo_" id="planimage_@image.Id">
+                            <img src="@Url.Content(image.Url+image.FileName)" width="272" height="211" />
+                            <a onclick="deletePlanImage(@image.Id);">X</a>
+                        </div>
+                    }
+                </div>
             }
             <div class="file_upload">
                 <input type="file" multiple="multiple" accept="image/*" name="planimages" class="select_photo" />
