--- a/ReHouse.FrontEnd/Content/minslider.css
+++ b/ReHouse.FrontEnd/Content/minslider.css
@@ -45,7 +45,6 @@ ol,ul { list-style:none; }
 #products .pagination {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
 }
 #products .pagination li a {
 	display:block;
@@ -66,6 +65,8 @@ ol,ul { list-style:none; }
 #products .slides_container img {
 	object-fit: cover;
 }
-
+#products .pagination li {
+	margin-bottom: 16px;
+}
 
 
