--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/NewBuilding/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/NewBuilding/Edit.cshtml
@@ -15,6 +15,7 @@
 </style>
 
 @section scripts{
+@Scripts.Render("~/bundles/imageLoader")
     @Scripts.Render("~/bundles/deleteImage")
     <script>
         var counter = parseInt($('#counter').val());
@@ -431,7 +432,9 @@
                 </div>
             }
             <div class="file_upload">
-                <input type="file" multiple="multiple" accept="image/*" name="images" class="select_photo" />
+                <input type="file" multiple="multiple" accept="image/*" name="images" class="select_photo" id="files" />
+                <br />
+                <output id="list"></output>
             </div>
             <h3>Планировки</h3>
 
@@ -448,7 +451,9 @@
                 </div>
             }
             <div class="file_upload">
-                <input type="file" multiple="multiple" accept="image/*" name="planimages" class="select_photo" />
+                <input type="file" multiple="multiple" accept="image/*" name="planimages" class="select_photo" id="files_plan" />
+                <br />
+                <output id="list_plan"></output>
             </div>
             @Html.HiddenFor(m => m.Latitude, new { @id = "place-ltd" })
             @Html.HiddenFor(m => m.Longitude, new { @id = "place-lgd" })
