--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Sale/Edit.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Sale/Edit.cshtml
@@ -18,6 +18,7 @@
 </style>
 
 @section scripts {
+@Scripts.Render("~/bundles/imageLoader")
     @Scripts.Render("~/bundles/slides")
     @Scripts.Render("~/bundles/deleteImage")
     <script>
@@ -397,7 +398,9 @@
                 </div>
             }
             <div class="file_upload">
-                <input type="file" multiple="multiple" accept="image/*" name="images" class="select_photo" />
+                <input type="file" multiple="multiple" accept="image/*" name="images" class="select_photo" id="files" />
+                <br />
+                <output id="list"></output>
             </div>
             <h3>Планировки</h3>
 
@@ -417,7 +420,9 @@
             @Html.HiddenFor(m => m.Longitude, new { @id = "place-lgd" })
 
             <div class="file_upload">
-                <input type="file" multiple="multiple" accept="image/*" name="planimages" class="select_photo" />
+                <input type="file" multiple="multiple" accept="image/*" name="planimages" class="select_photo" id="files_plan" />
+                <br />
+                <output id="list_plan"></output>
             </div>
 
             <button type="submit">Сохранить</button>
