--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Sale/Add.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Sale/Add.cshtml
@@ -401,7 +401,7 @@
                 <output id="list_plan"></output>
             </div>
 
-            <button type="submit">Добавить</button>
+            <button type="submit">Сохранить</button>
         </div>
     </form>
 
