--- a/ReHouse.FrontEnd/Views/Home/Index.cshtml
+++ b/ReHouse.FrontEnd/Views/Home/Index.cshtml
@@ -92,7 +92,7 @@
     <div class="streak"></div>
 
     <div class="d-carousel" id="p">
-        <h2>Новостройки</h2>
+        <h2>ЖК Новострои</h2>
         <ul class="carousel">
             @foreach (var item in Model.NewBuildingAdverts)
             {
