--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Add.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Rent/Add.cshtml
@@ -407,7 +407,7 @@
                 <output id="list_plan"></output>
             </div>
 
-            <button type="submit">Добавить</button>
+            <button type="submit">Сохранить</button>
         </div>
     </form>
 
@@ -419,6 +419,20 @@
     </div>
 </div>
 
+@*var fileBuffer=[];
 
+ // append the file list to an array
+ Array.prototype.push.apply( fileBuffer, fileDialog.files ); // <-- here
+
+ // And now you may manipulated the result as required
+
+ // shift an item off the array
+ var file = fileBuffer.shift(0,1);  // <-- works as expected
+                                           console.info( file.name + ", " + file.size + ", " + file.type );
+
+ // sort files by size
+ fileBuffer.sort(function(a,b) {
+    return a.size > b.size ? 1 : a.size < b.size ? -1 : 0;
+ });*@
 
 
