--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/NewBuilding/List.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/NewBuilding/List.cshtml
@@ -77,12 +77,14 @@
                     price = $('#price').val(),
                     builderId = $('#builder').val(),
                     expluatationId = $('#date').val(),
+                    managerId = $('#managers').val(),
                     isOnlyUser = $('#isonlyuser').val();
             var obj = {
                 "DistrictId": districtID,
                 "Price": price,
                 "BuilderId": builderId,
                 "ExpluatationDateId": expluatationId,
+                "UserId": managerId,
             "IsOnlyUser": isOnlyUser
         }
 
@@ -94,6 +96,7 @@
                     price = $('#price').val(),
                     builderId = $('#builder').val(),
                     expluatationId = $('#date').val(),
+                    managerId = $('#managers').val(),
                     isOnlyUser = $('#isonlyuser').val();
 
             var obj = {
@@ -101,6 +104,7 @@
                 "Price": price,
                 "BuilderId": builderId,
                 "ExpluatationDateId": expluatationId,
+                "UserId": managerId,
                 "IsOnlyUser": isOnlyUser
         }
 
