--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/_Layout.cshtml
@@ -203,7 +203,7 @@
     @Scripts.Render("~/bundles/lazyLoad")
     @Scripts.Render("~/bundles/unob")
     @Scripts.Render("~/Scripts/foundation")
-    @Scripts.Render("~/Scripts/vendorJs")
+    @*@Scripts.Render("~/Scripts/vendorJs")*@
     @Scripts.Render("~/Scripts/modulesJs")
     <script type="text/javascript">
         $(document).foundation();
