--- a/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Rent/Detail.cshtml
@@ -128,22 +128,22 @@
         <p class="grn">@Model.Advert.Price грн/мес</p>
         <pre></pre>
 
-        @if (ViewBag.USD != 0)
-        {
-            <p class="dot">·</p>
-            <pre> </pre>
-            <p class="DolUSA">@ViewBag.USD $/мес</p>
-            <pre></pre>
-        }
-        @if (ViewBag.EUR != 0)
-        {
-            <p class="dot">·</p>
-            <pre> </pre>
-            <p class="grn">@ViewBag.EUR €/мес</p>
-            <pre></pre>
-            <p class="dot">·</p>
-            <pre> </pre>
-        }
+        @*@if (ViewBag.USD != 0)
+    {
+        <p class="dot">·</p>
+        <pre> </pre>
+        <p class="DolUSA">@ViewBag.USD $/мес</p>
+        <pre></pre>
+    }
+    @if (ViewBag.EUR != 0)
+    {
+        <p class="dot">·</p>
+        <pre> </pre>
+        <p class="grn">@ViewBag.EUR €/мес</p>
+        <pre></pre>
+        <p class="dot">·</p>
+        <pre> </pre>
+    }*@
         <p class="square_meter">@pricePerSquere</p>
     </div>    
 
