--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_filters.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_filters.cshtml
@@ -1,90 +1,108 @@
 ﻿@using ReHouse.FrontEnd.Models
 @using ReHouse.Utils.Helpers
+@using ReHouse.Utils
 @model LoadAdvertsModel
+@if (Session != null && Session["user"] is SessionModel)
+{
+    var session = Session["user"] as SessionModel;
 
-<div class="selection-admin">
-    <div class="typeofproperty">
-        <select id="category">
-            <option selected value="@Model.CategoryId">Тип недвижимости</option>
-            @foreach (var category in Model.Categories)
-            {
-                <option value="@category.Id">@category.RussianName</option>
-            }
-        </select>
-    </div>
-    <div class="region">
-        <select id="district">
-            <option selected value="0">Выбрать район</option>
-            @foreach (var district in Model.Districts.Where(x => x.ParrentId == null).OrderByDescending(x => x.Id))
-            {
-                <option disabled value="@district.Id">--@district.RussianName--</option>
-                foreach (var dis in Model.Districts.Where(x => x.ParrentId == district.Id))
-                {
-                    <option value="@dis.Id">@dis.RussianName</option>
-                }
-            }
-        </select>
-    </div>
 
-    <div class="_cost">
-        <select id="price">
-            <option selected value="0">Цена</option>
-            @for (int i = 0; i < Model.Prices.Count; i++)
-            {
-                if (ViewBag.Type == AdvertsType.Sale)
+    <div class="selection-admin">
+        <div class="typeofproperty">
+            <select id="category">
+                <option selected value="@Model.CategoryId">Тип недвижимости</option>
+                @foreach (var category in Model.Categories)
                 {
-                    if (i == 0)
-                    {
-                        <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max $</option>
-                    }
-                    else if (i == Model.Prices.Count - 1)
-                    {
-                        <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min $</option>
-                    }
-                    else
-                    {
-                        <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max $</option>
-                    }
-                }
-                else if (ViewBag.Type == AdvertsType.Rent)
-                {
-                    if (i == 0)
-                    {
-                        <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max грн/мес</option>
-                    }
-                    else if (i == Model.Prices.Count - 1)
-                    {
-                        <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min грн/мес</option>
-                    }
-                    else
-                    {
-                        <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max грн/мес</option>
-                    }
-                }
-            }
-        </select>
-    </div>
-
-    @if (Model.TrimConditions != null)
-    {
-        <div class="trimcondition">
-            <select id="trimcondition">
-                <option selected value="0">Состояние отделки</option>
-                @foreach (var condition in Model.TrimConditions)
-                {
-                    <option value="@condition.Id">@condition.RussianName</option>
+                    <option value="@category.Id">@category.RussianName</option>
                 }
             </select>
         </div>
-    }
-    @*<div class="checkbox_">
-        <select id="isonlyuser">
-            <option value="false">Все объявления</option>
-            <option value="true">Мои объявления</option>
-        </select>
-    </div>*@
+        <div class="region">
+            <select id="district">
+                <option selected value="0">Выбрать район</option>
+                @foreach (var district in Model.Districts.Where(x => x.ParrentId == null).OrderByDescending(x => x.Id))
+                {
+                    <option disabled value="@district.Id">--@district.RussianName--</option>
+                    foreach (var dis in Model.Districts.Where(x => x.ParrentId == district.Id))
+                    {
+                        <option value="@dis.Id">@dis.RussianName</option>
+                    }
+                }
+            </select>
+        </div>
 
-    <div class="search-button-admin" id="search">
-        <a>Поиск</a>
+        <div class="_cost">
+            <select id="price">
+                <option selected value="0">Цена</option>
+                @for (int i = 0; i < Model.Prices.Count; i++)
+                {
+                    if (ViewBag.Type == AdvertsType.Sale)
+                    {
+                        if (i == 0)
+                        {
+                            <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max $</option>
+                        }
+                        else if (i == Model.Prices.Count - 1)
+                        {
+                            <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min $</option>
+                        }
+                        else
+                        {
+                            <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max $</option>
+                        }
+                    }
+                    else if (ViewBag.Type == AdvertsType.Rent)
+                    {
+                        if (i == 0)
+                        {
+                            <option value="@Model.Prices[i].Id">до @Model.Prices[i].Max грн/мес</option>
+                        }
+                        else if (i == Model.Prices.Count - 1)
+                        {
+                            <option value="@Model.Prices[i].Id">свыше @Model.Prices[i].Min грн/мес</option>
+                        }
+                        else
+                        {
+                            <option value="@Model.Prices[i].Id">@Model.Prices[i].Min-@Model.Prices[i].Max грн/мес</option>
+                        }
+                    }
+                }
+            </select>
+        </div>
+
+        @if (Model.TrimConditions != null)
+        {
+            <div class="trimcondition">
+                <select id="trimcondition">
+                    <option selected value="0">Состояние отделки</option>
+                    @foreach (var condition in Model.TrimConditions)
+                    {
+                        <option value="@condition.Id">@condition.RussianName</option>
+                    }
+                </select>
+            </div>
+        }
+        @if (session != null && (session.Role.RussianName == ConstV.RoleAdministrator || session.Role.RussianName == ConstV.RoleManager))
+        {
+            <div class="ck">
+                <select id="managers">
+                    <option selected value="0">Менеджер</option>
+                    @foreach (var user in Model.Users)
+                    {
+                        <option value="@user.Id">@user.FirstName</option>
+                    }
+                </select>
+            </div>
+        }
+        @*<div class="checkbox_">
+                <select id="isonlyuser">
+                    <option value="false">Все объявления</option>
+                    <option value="true">Мои объявления</option>
+                </select>
+            </div>*@
+
+        <div class="search-button-admin" id="search">
+            <a>Поиск</a>
+        </div>
     </div>
-</div>
+}
