--- a/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_listOfAdverts.cshtml
+++ b/ReHouse.FrontEnd/Areas/Cabinet/Views/Shared/Advert/_listOfAdverts.cshtml
@@ -7,7 +7,7 @@
     {
         <tr>
             <td><input type="checkbox" class="checkbox" id="checkbox" value="@item.Id" style="width:20px;" /></td>
-            <td>@item.Id</td>
+            <td>@item.User.FirstName</td>
             <td>
                 <div class="prod_info">
                     <h3>@item.Title.RussianName</h3>
