--- a/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
@@ -128,22 +128,24 @@
     <div class="h2sale"><h2>Описание</h2></div>
 
     <div class="h3cost">
-        @if (ViewBag.UAH != 0)
+        @*@if (ViewBag.UAH != 0)
         {
             <p class="grn">@ViewBag.UAH грн</p>
             <pre></pre>
             <p class="dot">·</p>
             <pre> </pre>
-        }
+        }*@
         <p class="DolUSA">@Model.Advert.Price $</p>
         <pre></pre>
-        @if (ViewBag.EUR != 0)
-        {
-            <p class="dot">·</p>
-            <pre> </pre>
-            <p class="grn">@ViewBag.EUR €</p>
-            <pre></pre>
-        }
+        @*@if (ViewBag.EUR != 0)
+    {
+        <p class="dot">·</p>
+        <pre> </pre>
+        <p class="grn">@ViewBag.EUR €</p>
+        <pre></pre>
+    }*@
+        <p class="square_meter">@pricePerSquere</p>
+
     </div>
 
     <p>@Model.Advert.Description</p>
