--- a/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/NewBuilding/Detail.cshtml
@@ -51,10 +51,10 @@
 </div>
 <div class="share_icons">
     <div class="share_fb">
-        <a onclick="Share.facebook('http://rehouse-realty.com.ua/newbuilding/detail/@(Model.NewBuilding.Id)', '@Model.NewBuilding.Name', 'http://rehouse-realty.com.ua@(Url.Content("~/Content/images/news1.jpg"))', '@Model.NewBuilding.Adress')"></a>
+        <a onclick="Share.facebook('http://rehouse-realty.com.ua/newbuilding/detail/@(Model.NewBuilding.Id)', '@Model.NewBuilding.Name', 'http://rehouse-realty.com.ua@(Url.Content(Model.NewBuilding.Images?.FirstOrDefault() != null ? Model.NewBuilding.Images.FirstOrDefault().Url + Model.NewBuilding.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(Model.NewBuilding.Adress?.Replace(Environment.NewLine, " "))')"></a>
     </div>
     <div class="share_vk">
-        <a onclick="Share.vkontakte('http://rehouse-realty.com.ua/newbuilding/detail/@(Model.NewBuilding.Id)', '@Model.NewBuilding.Name', 'http://rehouse-realty.com.ua@(Url.Content("~/Content/images/news1.jpg"))', '@Model.NewBuilding.Adress')"></a>
+        <a onclick="Share.vkontakte('http://rehouse-realty.com.ua/newbuilding/detail/@(Model.NewBuilding.Id)', '@Model.NewBuilding.Name', 'http://rehouse-realty.com.ua@(Url.Content(Model.NewBuilding.Images?.FirstOrDefault() != null ? Model.NewBuilding.Images.FirstOrDefault().Url + Model.NewBuilding.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(Model.NewBuilding.Adress?.Replace(Environment.NewLine, " "))')"></a>
     </div>
     <div class="share_tw">
         <a onclick="Share.twitter('http://rehouse-realty.com.ua/newbuilding/detail/@(Model.NewBuilding.Id)', '@Model.NewBuilding.Name')"></a>
