--- a/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
+++ b/ReHouse.FrontEnd/Views/Sale/Detail.cshtml
@@ -79,10 +79,10 @@
 </div>
 <div class="share_icons">
     <div class="share_fb">
-        <a onclick="Share.facebook('http://rehouse-realty.com.ua/sale/detail/@(Model.Advert.Id)', 'Продам @Model.Advert.Title.RussianName, @Model.Advert.Street', 'http://rehouse-realty.com.ua@(Url.Content("~/Content/images/news1.jpg"))', '@Model.Advert.Description')"></a>
+        <a onclick="Share.facebook('http://rehouse-realty.com.ua/sale/detail/@(Model.Advert.Id)', 'Продам @Model.Advert.Title.RussianName, @Model.Advert.Street', 'http://rehouse-realty.com.ua@(Url.Content(Model.Advert.Images?.FirstOrDefault() != null ? Model.Advert.Images.FirstOrDefault().Url + Model.Advert.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(Model.Advert.Description?.Replace(Environment.NewLine, " "))')"></a>
     </div>
     <div class="share_vk">
-        <a onclick="Share.vkontakte('http://rehouse-realty.com.ua/sale/detail/@(Model.Advert.Id)', 'Продам @Model.Advert.Title.RussianName, @Model.Advert.Street', 'http://rehouse-realty.com.ua@(Url.Content("~/Content/images/news1.jpg"))', '@Model.Advert.Description')"></a>
+        <a onclick="Share.vkontakte('http://rehouse-realty.com.ua/sale/detail/@(Model.Advert.Id)', 'Продам @Model.Advert.Title.RussianName, @Model.Advert.Street', 'http://rehouse-realty.com.ua@(Url.Content(Model.Advert.Images?.FirstOrDefault() != null ? Model.Advert.Images.FirstOrDefault().Url + Model.Advert.Images.FirstOrDefault().FileName : "~/Content/images/news1.jpg"))', '@(Model.Advert.Description?.Replace(Environment.NewLine, " "))')"></a>
     </div>
     <div class="share_tw">
         <a onclick="Share.twitter('http://rehouse-realty.com.ua/sale/detail/@(Model.Advert.Id)', 'Продам @Model.Advert.Title.RussianName, @Model.Advert.Street')"></a>
@@ -106,10 +106,8 @@
                     i++;
                     <a><img src="@Url.Content(item.Url + item.FileName)" width="767" height="600" alt=""></a>
                 }
-
             </div>
             <ul class="pagination">
-
                 @foreach (var item in Model.Advert.Images)
                 {
                     if (j > 2)
@@ -119,7 +117,6 @@
                     j++;
                     <li><a href="#"><img src="@Url.Content(item.Url + item.FileName)" alt=""></a></li>
                 }
-
             </ul>
         </div>
     </div>
@@ -137,13 +134,13 @@
         }*@
         <p class="DolUSA">@Model.Advert.Price $</p>
         <pre></pre>
+        <p class="dot">·</p>
         @*@if (ViewBag.EUR != 0)
     {
-        <p class="dot">·</p>
         <pre> </pre>
         <p class="grn">@ViewBag.EUR €</p>
-        <pre></pre>
     }*@
+        <pre> </pre>
         <p class="square_meter">@pricePerSquere</p>
 
     </div>
