--- a/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
+++ b/ReHouse.FrontEnd/Views/Shared/_LayoutAdverts.cshtml
@@ -18,13 +18,13 @@
     }
     else
     {
-        <title>Агенство недвижимости ReHouse.com.ua</title>
-        <meta property="og:title" content="Агенство недвижимости ReHouse.com.ua" />
-        <meta name="twitter:title" content="Агенство недвижимости ReHouse.com.ua">
-        <meta itemprop="name" content="Агенство недвижимости ReHouse.com.ua" />
-        <meta property="og:site_name" content="Агенство недвижимости ReHouse.com.ua" />
+        <title>Международная риэлторская инвестиционная компания REHOUSE</title>
+        <meta property="og:title" content="Международная риэлторская инвестиционная компания REHOUSE" />
+        <meta name="twitter:title" content="Международная риэлторская инвестиционная компания REHOUSE">
+        <meta itemprop="name" content="Международная риэлторская инвестиционная компания REHOUSE" />
+        <meta property="og:site_name" content="Международная риэлторская инвестиционная компания REHOUSE" />
     }
-    <meta name="keywords" content="Агенство недвижимости ReHouse.com.ua" />
+    <meta name="keywords" content="Международная риэлторская инвестиционная компания REHOUSE" />
     @if (!String.IsNullOrEmpty(ViewBag.Description))
     {
         <meta name="description" content="@ViewBag.Description" />
